[fix] header not showing on desktop.

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -35,6 +35,7 @@
       justify-content: flex-end;
       align-items: center;
       text-align: initial;
+      height: auto;
       padding: 0;
     }
 
